# desec_cli

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  main.rs
