[package]
name = "desec_cli"
version = "0.2.2"
edition = "2021"
authors = ["Andreas Bruckmeier"]
description = "Commandline client for the deSEC DNS API"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/desec_cli"
repository = "https://github.com/andreas-bruckmeier/desec_cli"
rust-version = "1.74.1"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
env_logger = { version = "0.11", optional = true }
desec_api = "0.4"
clap_complete = "4"
audit = "0.7.3"

[features]
logging = ["dep:env_logger"]
